Revert "merge dev, update travis env"
This reverts commit ae04ff681f9b96ca3074556cc978a6101dc2ce32.

--- a/tcf_website/static/common/rating_card.css
+++ b/tcf_website/static/common/rating_card.css
@@ -1,10 +1,10 @@
 .rating-card-link {
-    background-color: var(--secondary-color);
+    background-color: rgb(91, 129, 182);
     color: #EBEBEB;
 }
 
 .rating-card-link:hover {
-    background-color: var(--main-color);
+    background-color: rgb(57, 72, 108);
     color: #EBEBEB;
 }
 
