--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -26,13 +26,14 @@ html {
 }
 
 body {
+    font-family: 'Lato', sans-serif;
     padding-top: 70px; /* Height of fixed navbar */
-    background-color: var(--background-color);
+    background-color: #EBEBEB;
     max-width: 100vw;
 }
 
 .content {
-  background-color: var(--background-color);
+  background-color: #EBEBEB;
 }
 
 @media (min-width: 768px) {
@@ -40,6 +41,19 @@ body {
         width: calc(100vw - 240px);
         margin-left: 240px;
     }
+}
+
+a {
+    color: inherit;
+}
+a:hover {
+    text-decoration: none;
+    color: #db4929;
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
 }
 
 footer {
