--- a/tcf_website/static/base/simple-sidebar.css
+++ b/tcf_website/static/base/simple-sidebar.css
@@ -1,3 +1,8 @@
+/*!
+ * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template-overviews/simple-sidebar)
+ * Copyright 2013-2019 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/LICENSE)
+ */
 body {
   overflow-x: hidden;
 }
@@ -9,10 +14,9 @@ body {
   -moz-transition: margin-left .25s;
   -o-transition: margin-left .25s;
   transition: margin-left .25s;
-  background-color: var(--main-color);
+  background-color: rgb(23, 34, 72);
   position: fixed;
   z-index: 9999;
-  filter: brightness(75%);
 }
 
 #sidebar-wrapper .sidebar-heading {
@@ -26,15 +30,15 @@ body {
 }
 
 #sidebar-wrapper .list-group-item, .footer, .footer a {
-  background-color: var(--main-color);
-  color: var(--background-color);
+  background-color: rgb(23, 34, 72);
+  color: gray;
 }
 
 #sidebar-wrapper .list-group-item.active,
 #sidebar-wrapper .list-group-item:hover {
   color: white;
-  border-color: var(--main-color);
-  filter: brightness(125%);
+  border-color: rgb(23, 34, 72);
+  filter: brightness(150%);
 }
 
 #page-content-wrapper {
@@ -56,10 +60,7 @@ body {
     width: 100%;
   }
 }
-<<<<<<< HEAD:tcf_website/static/base/simple-sidebar.css
 
 .modal {
   z-index: 10000;
 }
-=======
->>>>>>> dev:tcf_website/static/base/sidebar.css
