--- a/tcf_website/static/browse/browse.css
+++ b/tcf_website/static/browse/browse.css
@@ -7,10 +7,6 @@
     padding: 0 0 0 10px;
 }
 
-.font-weight-bold {
-    margin-top: 20px;
-}
-
 @media (min-width: 768px) {
     .department-list {
         columns: 2;
@@ -18,6 +14,6 @@
 }
 
 .school > .card-header {
-    background-color: var(--secondary-color);
+    background-color: rgb(91, 129, 182);
     color: white;
 }
