--- a/tcf_website/static/browse/browse.css
+++ b/tcf_website/static/browse/browse.css
@@ -7,6 +7,10 @@
     padding: 0 0 0 10px;
 }
 
+.font-weight-bold {
+    margin-top: 20px;
+}
+
 @media (min-width: 768px) {
     .department-list {
         columns: 2;
@@ -14,6 +18,6 @@
 }
 
 .school > .card-header {
-    background-color: rgb(91, 129, 182);
+    background-color: var(--secondary-color);
     color: white;
 }
