--- a/tcf_website/static/search/search.css
+++ b/tcf_website/static/search/search.css
@@ -1,8 +1,12 @@
-.search hr {
-    border: 0;
-    clear:both;
-    display:block;
-    width: 96%;               
-    background-color:rgb(165, 165, 165);
-    height: 1px;
-  }
+
+.search .search-results {
+  background-color: white;
+}
+
+.result-nav .btn-group {
+  flex-wrap: wrap;
+}
+
+.search-result-header h3, .search-result-header p {
+  display: inline-block;
+}
