--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -1,23 +1,270 @@
-{% extends "base/base.html" %}
+{% extends "base/index.html" %}
 {% load static %}
 
+
 {% block styles %}
-<link rel="stylesheet" href="{% static 'landing/landing.css' %}" />
+<!-- Simple line icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" integrity="sha512-QKC1UZ/ZHNgFzVKSAhV5v5j73eeL9EEN289eKAEFaAjgAiobVAnVv/AGuPbXsKl1dNoel3kNr6PYnSiTzVVBCw==" crossorigin="anonymous" />
+
+<!-- Custom styles for this template -->
+<link rel="stylesheet" href="{% static 'base/navbar.css' %}" />
+<link rel="stylesheet" href="{% static 'landing/landing-page.css' %}" />
 {% endblock %}
 
-{% block content %}
-<div class="jumbotron">
-    <h1 class="display-4">Welcome to theCourseForum
-    </h1>
-    <p class="lead">connecting you to the courses you love</p>
-    <hr class="my-4">
-    <p>See what other students say about classes and professors</p>
-    <p>Check out actual grade distributions from past semesters
-    </p>
-    <p>Write reviews for courses you've taken.
-    </p>
-    <br>
-    <a class="btn btn-primary btn-lg" href="{% url 'browse' %}" role="button">Browse reviews</a>
-    <a class="btn btn-light btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
-</div>
+
+{% block body %}
+<div class="bg-light">
+
+  <!-- Custom Landing Page Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <div class="container">
+      <!-- tCF logo -->
+      <a class="navbar-brand logo-container" href="/">
+        <img class="logo" src="{% static 'base/img/new_logo.png' %}">
+      </a>
+      <!-- tCF profile dropdown -->
+      <div class="account-settings">
+        {% if user.is_authenticated %}
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+            Hey, {{user.first_name}}!
+          </a>
+          <div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+            <a class="dropdown-item" href="{% url 'reviews' %}">My Reviews</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+          </div>
+        </div>
+        {% else %}
+        <div class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+        </div>
+      {% endif %}
+      </div>
+    </div>
+  </nav>
+
+  <!-- Masthead -->
+  <header class="masthead text-center">
+    <div class="container mt-5 pt-5">
+      <div class="row pt-5">
+        <div class="col-xl-9 mx-auto">
+          <h1 class="mb-2">theCourseForum</h1>
+          <p class="lead mb-5">A UVA student community, connecting you to the courses you love.</p>
+        </div>
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+          {% include "base/searchbar.html" %}
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Icons Grid -->
+  <section class="features-icons py-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <a href="{% url 'browse' %}" class="link-unstyled">
+            <div class="card m-3">
+              <div class="card-body features-icons-item mx-auto mb-2">
+                <div class="features-icons-icon d-flex">
+                  <i class="icon-list m-auto text-tcf-indigo"></i>
+                </div>
+                <h4 class="card-title">Browse Courses</h4>
+                <p class="card-text font-weight-light mb-0">See what other UVA students say about classes and professors</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4">
+          <a href="{% url 'browse' %}" class="link-unstyled">
+            <div class="card m-3">
+              <div class="card-body features-icons-item mx-auto mb-2">
+                <div class="features-icons-icon d-flex">
+                  <i class="icon-chart m-auto text-tcf-indigo"></i>
+                </div>
+                <h4 class="card-title">View Grades</h4>
+                <p class="card-text font-weight-light mb-0">Check out actual grade distributions from past semesters</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4">
+          <a href="{% url 'new_review' %}" class="link-unstyled">
+            <div class="card m-3">
+              <div class="card-body features-icons-item mx-auto mb-2">
+                <div class="features-icons-icon d-flex">
+                  <i class="icon-pencil m-auto text-tcf-indigo"></i>
+                </div>
+                <h4 class="card-title">Write a Review</h4>
+                <p class="card-text font-weight-light mb-0">Help our community by telling others about your class experience</p>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Team -->
+  <section class="about-team py-5 my-5">
+    <div class="about-header row">
+      <div class="col-lg-8 p-4 bg-tcf-indigo text-white text-right">
+        <h3 class="font-weight-light px-4">We'll connect you to courses you'll love, and make enrollment stress free.</h3>
+      </div>
+      <div class="col-lg-4">
+      </div>
+    </div>
+
+    <div class="about-content container">
+      <div class="row pt-5 px-0">
+        <div class="col-lg-8">
+          <div class="team-photos row text-center mr-4 mb-4">
+            {% for member in executive_team %}
+              <div class="col-md-3 col-sm-6 d-flex px-0">
+                <div class="about-member card flex-fill bg-light">
+                  <div class="about-pfp px-4 py-3">
+                    <img class="card-img-top rounded-circle" src="{% static 'about/team-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                  </div>
+                  <div class="card-body p-1">
+                    <h6 class="card-text">{{ member.name }}</h6>
+                    <p class="card-text small">{{ member.role }}</p>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+            <div class="col-md-3 col-sm-6">
+              <a href="{% url 'about' %}" class="link-unstyled">
+                <div class="about-link card bg-tcf-orange mt-3 mx-1">
+                  <div class="card-body mx-auto py-5">
+                    <h4 class="card-text text-white text-left">Meet the full team >></h4>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <a href="{% url 'about' %}" class="link-unstyled">
+            <div class="card about-info mx-3">
+              <div class="card-body mx-auto mb-2">
+                <h3 class="card-title">About Us</h3>
+                <p class="card-text font-weight-light mb-2">
+                  theCourseForum is a product of volunteer developers and contributors from the UVA community.
+                  Founded in 2005 by two alumni, we are a student-run nonprofit CIO at the University of Virginia.
+                  <br/><br/>
+                  We keep our servers running through university grants and your donations.
+                  Just $4 keeps our servers up for a day, so we can keep serving you the best content.
+                </p>
+                <a href="https://gf.me/u/yvhyfa" class="btn btn-primary bg-tcf-indigo">Donate $4 today</a>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- Feedback Form -->
+  <section class="feedback py-5 mb-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 mx-auto">
+          <h2 class="mb-4">Tell us about your experience</h2>
+          <p class="lead mb-5">Keep in touch! We would love to hear about your experience with the site and areas where you think we can improve.</p>
+        </div>
+        <div class="col-md-10 mx-auto text-left">
+          <form>
+            <div class="form-row">
+              <div class="col-md-6">
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputFname">First Name</label>
+                    <input type="text" class="form-control" id="inputFname" placeholder="Karen">
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputLname">Last Name</label>
+                    <input type="text" class="form-control" id="inputLname" placeholder="Doe">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="inputEmail">Email</label>
+                  <input type="email" class="form-control" id="inputEmail" placeholder="youremail@virginia.edu">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="inputTitle">Title</label>
+                  <input type="text" class="form-control" id="inputTitle" placeholder="Message Subject">
+                </div>
+                <div class="form-group">
+                  <label for="inputMessage">Feedback</label>
+                  <textarea type="text" class="form-control" id="inputMessage" rows="6" placeholder="Write your message here..."></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="text-right">
+              <button type="submit" class="btn btn-primary bg-tcf-indigo">Submit Feedback</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<div>
+
+<!-- Footer -->
+<footer class="footer py-3 bg-tcf-orange text-white link-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+        <ul class="list-inline mb-2">
+          <li class="list-inline-item">
+            <a href="{% url 'about' %}">About</a>
+          </li>
+          <li class="list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="#">Contact</a>
+          </li>
+          <li class="list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="{% url 'terms' %}">Terms of Use</a>
+          </li>
+          <li class="list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="{% url 'privacy' %}">Privacy Policy</a>
+          </li>
+        </ul>
+        <p class="text-white small mb-4 mb-lg-0">&copy; theCourseForum 2020. All Rights Reserved.</p>
+      </div>
+      <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item mr-3">
+            <h5>Follow theCourseForum!</h5>
+          </li>
+          <li class="list-inline-item mr-3">
+            <a href="https://www.facebook.com/thecourseforum">
+              <i class="fab fa-facebook fa-2x fa-fw"></i>
+            </a>
+          </li>
+          <li class="list-inline-item mr-3">
+            <a href="https://www.instagram.com/thecourseforum_uva/">
+              <i class="fab fa-instagram fa-2x fa-fw"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://twitter.com/thecourseforum">
+              <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 {% endblock %}
