Fix header image on landing page

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -45,24 +45,11 @@
     </div>
   </nav>
 
-  <!-- <div class="header-img row pt-5">
-    {% with ''|center:4 as range %}
-    {% for _ in range %}
-      <div class="col pt-5 px-1">
-        <img class="logo w-100 h-100" src="{% static 'landing/UVA_rotunda_logo.png' %}">
-      </div>
-      <div class="col pt-5 px-1">
-        <img class="logo w-100 h-100" src="{% static 'landing/UVA_rotunda_logo_blue.png' %}">
-      </div>
-    {% endfor %}
-    {% endwith %}
-  </div> -->
-
   <!-- Masthead -->
   <header class="masthead text-center p-5">
     <div class="header-img row my-4">
-      <div class="col-md-4 offset-md-4">
-        <img class="w-100 h-100" src="{% static 'landing/UVA_rotunda_logo.png' %}">
+      <div class="col-sm-2 offset-sm-5">
+        <img class="w-100 h-100" src="{% static 'landing/UVA_rotunda_logo_blue.png' %}">
       </div>
     </div>
     <div class="row">
