--- a/tcf_website/static/base/tcf-style.css
+++ b/tcf_website/static/base/tcf-style.css
@@ -5,7 +5,7 @@
 /* Use these variables in CSS stylesheets */
 :root {
 --main-color: #274F97;        /* Indigo/Dark blue */
---secondary-color: #476eb5;   /* Light blue */
+--secondary-color: #7ca2e8;   /* Light blue */
 --accent-color: #D75626;      /* Orange */
 --dark-color: #545454;        /* Dark grey, for headers/buttons */
 --shadow-color: #a6a6a6;      /* Medium grey, used for shadows */
