Landing page logo option 2

--- a/tcf_website/static/landing/landing.css
+++ b/tcf_website/static/landing/landing.css
@@ -8,6 +8,11 @@
 nav.navbar {
   background-color: white;
 }
+nav.navbar img.logo{
+  height: 2rem;
+  weight: auto;
+  opacity: 0.75;
+}
 
 /* Masthead */
 .header-img img {
