--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -38,7 +38,7 @@
     import { loadPage } from "{% static 'department/loadMoreCourses.js' %}";
 
     {% for sd in subdepartments %}
-        loadPage("{{sd.id}}", "/api/courses/?page=1&page_size=30&subdepartment={{sd.id}}&stats&recent5years");
+        loadPage("{{sd.id}}", "/api/courses/?page=1&page_size=30&subdepartment={{sd.id}}&simplestats&recent5years");
     {% endfor %}
 </script>
 {% endblock %}
