--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -8,66 +8,203 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="course-professor container">
 
-    {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
+  {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
-    <div class="d-flex flex-column align-items-center my-3 mt-md-5">
-        <h1>{{ instructor.full_name }}</h1>
-        <div class="d-md-flex">
-            <h4 class="mr-md-3">{{ course.code }}</h4>
-            <h4 class="mr-md-3">{{ course.title }}</h4>
-        </div>
+  <div class="d-flex flex-column align-items-center my-3 mt-md-5">
+    <h1>{{ instructor.full_name }}</h1>
+    <div class="d-md-flex">
+      <h4 class="mr-md-3">{{ course.code }}</h4>
+      <h4 class="mr-md-3">{{ course.title }}</h4>
     </div>
+  </div>
 
-    <div class="ratings row d-flex mb-3 justify-content-center">
-        {% if rating %}
-        <div class="card col-lg-3 text-center">
-            <div class="card-body">
-              <h5 class="card-title display-4">
-                  {{ rating|floatformat:2 }}
-              </h5>
-              <p class="card-text"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
-            </div>
+  <div class="grades_ratings_container ">
+    <div class="ratings_container">
+      <div class="ratings_row">
+        <div class="rating_card">
+          <span class="rating_card_num ">{{ rating|floatformat:2 }}</span>
+          <p class="rating_card_desc"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
         </div>
-        {% endif %}
-        {% if difficulty %}
-        <div class="card mx-2 col-lg-3 text-center">
-            <div class="card-body">
-              <h5 class="card-title display-4">
-                  {{ difficulty|floatformat:2 }}
-              </h5>
-              <p class="card-text"><i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;Difficulty</p>
+        <div class="info_container">
+          <div class="info_row">
+            <div class="info_title">
+              Professor
             </div>
-        </div>
-        {% endif %}
-        {% if hours %}
-        <div class="card col-lg-3 text-center">
-            <div class="card-body">
-              <h5 class="card-title display-4">
-                  {{ hours|floatformat:2 }}
-              </h5>
-              <p class="card-text"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
+            <div class="info_bar">
+              <div class="progress p-0 m-0">
+                <div class="progress-bar professor-bar p-0 m-0" style="width: 0%"></div>
+              </div>
             </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+          <div class="info_row">
+            <div class="info_title">
+              Fun
+            </div>
+            <div class="info_bar">
+              <div class="progress p-0 m-0">
+                <div class="progress-bar fun-bar p-0 m-0" style="width:0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+          <div class="info_row">
+            <div class="info_title">
+              Difficulty
+            </div>
+            <div class="info_bar">
+              <div class="progress  p-0 m-0">
+                <div class="progress-bar difficulty-bar p-0 m-0" style="width:0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+          <div class="info_row">
+            <div class="info_title">
+              Recommend
+            </div>
+            <div class="info_bar">
+              <div class="progress  p-0 m-0">
+                <div class="progress-bar recommend-bar p-0 m-0" style="width:0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
         </div>
-        {% endif %}
-    </div>
-    {% if reviews %}
-    <div class="dropdown">
-      <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-      <div class="dropdown-menu" aria-labelledby="sortOptions">
-        <button id="votes-sort-btn" class="dropdown-item" type="button">Most Helpful</button>
-        <button id="recent-sort-btn" class="dropdown-item" type="button">Most Recent</button>
-        <button id="highrating-sort-btn"class="dropdown-item" type="button">Highest Rating</button>
-        <button id="lowrating-sort-btn"class="dropdown-item" type="button">Lowest Rating</button>
+      </div>
+      <div class="ratings_row" style="align-items: flex-end">
+        <div class="rating_card">
+          <span class="rating_card_num ">{{ hours|floatformat:2 }}</span>
+          <p class="rating_card_desc"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
+        </div>
+        <div class="info_container">
+          <div class="info_row">
+            <div class="info_title">
+              Reading
+            </div>
+            <div class="info_bar">
+              <div class="progress  p-0 m-0">
+                <div class="progress-bar reading-bar p-0 m-0" style="width:0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+          <div class="info_row">
+            <div class="info_title">
+              Writing
+            </div>
+            <div class="info_bar">
+              <div class="progress  p-0 m-0">
+                <div class="progress-bar writing-bar p-0 m-0" style="width:0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+          <div class="info_row">
+            <div class="info_title">
+              Group
+            </div>
+            <div class="info_bar">
+              <div class="progress  p-0 m-0">
+                <div class="progress-bar group-bar p-0 m-0" style="width:0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+          <div class="info_row">
+            <div class="info_title">
+              Other
+            </div>
+            <div class="info_bar">
+              <div class="progress p-0 m-0">
+                <div class="progress-bar other-bar p-0 m-0 {{rating}}" style="width: 0%"></div>
+              </div>
+            </div>
+            <div class="info_num">
+              3.29
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    {% endif %}
-
-    {% include "reviews/reviews.html" with reviews=reviews %}
+    <div class="grades_container">
+      <canvas id="myChart2" class="pie-chart "></canvas>
+      <div class="Absolute-Center">
+        <p class="gpa-text">3.50 GPA</p>
+        <p class="students-text">217 Students</p>
+      </div>
     </div>
+
+  </div>
+
+
+  <div class="dropdown">
+    <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions"
+      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+    <div class="dropdown-menu" aria-labelledby="sortOptions">
+      <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
+        Helpful</button>
+      <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
+        Recent</button>
+      <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Highest
+        Rating</button>
+      <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Lowest
+        Rating</button>
+    </div>
+  </div>
+
+  {% include "reviews/reviews.html" with reviews=reviews %}
+</div>
 {% endblock %}
 
 {% block js %}
 <script type="module" src="{% static 'reviews/review.js' %}"></script>
+<script src="{% static 'course/javascript/Chart.bundle.js' %}"></script>
+<script src="{% static 'course/javascript/chart.js' %}"></script>
+<script>
+    $(document).ready(function () {
+      var professor_percent = "{{rating}}"
+      $(".professor-bar").width(professor_percent+"%");
+
+      var fun_percent = "{{rating}}"
+      $(".fun-bar").width(fun_percent+"%");
+
+      var difficulty_percent = "{{rating}}"
+      $(".difficulty-bar").width(difficulty_percent+"%");
+
+      var recommend_percent = "{{rating}}"
+      $(".recommend-bar").width(recommend_percent+"%");
+
+      var reading_percent = "{{rating}}"
+      $(".reading-bar").width(reading_percent+"%");
+
+      var writing_percent = "{{rating}}"
+      $(".writing-bar").width(writing_percent+"%");
+
+      var group_percent = "{{rating}}"
+      $(".group-bar").width(group_percent+"%");
+
+      var other_percent = "{{rating}}"
+      $(".other-bar").width(other_percent+"%");
+    });
+    
+  </script>
 {% endblock %}
+
