--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -208,7 +208,7 @@
               </div>
             </div>
             <div class="text-right">
-              <button type="submit" class="btn btn-primary bg-tcf-indigo">Submit Feedback</button>
+              <button type="submit" class="btn btn-primary bg-tcf-indigo" id="submitFeedbackBtn">Submit Feedback</button>
             </div>
           </form>
         </div>
@@ -267,4 +267,8 @@
     </div>
   </div>
 </footer>
+{% endblock %}
+
+{% block js %}
+<script type="module" src="{% static 'landing/feedbackform.js' %}"></script>
 {% endblock %}
