--- a/tcf_website/templates/reviews/user_reviews.html
+++ b/tcf_website/templates/reviews/user_reviews.html
@@ -13,5 +13,5 @@
 {% endblock %}
 
 {% block js %}
-<script type="module" src="{% static 'reviews/review.js' %}"></script>
+<script src="{% static 'reviews/review.js' %}"></script>
 {% endblock %}
