--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -1,12 +1,11 @@
 <div id="review{{review.id}}" class="review card mb-2 d-flex flex-row align-items-center">
 
     <div class="d-none d-sm-flex vote-container ml-4 mr-2 flex-column justify-content-center align-items-center">
-        <!--Voting logic is implemented in the <script> tag of reviews.html-->
-        <a class="upvote {% if review.user_vote == 1 %}active{% endif %}" href="{% url 'login' %}">
+        <a class="upvote {% if review.user_vote == 1 %}active{% endif %}" {% if user.is_authenticated %}onclick="handleVote({{review.id}}, true)" href="javascript:;"{% else %}href="{% url 'login' %}"{% endif %}>
             <i class="fa fa-angle-up fa-fw"></i>
         </a>
         <span id="vote-count" class="voteCount">{{ review.count_votes }}</span>
-        <a class="downvote {% if review.user_vote == -1 %}active{% endif %}" href="{% url 'login' %}">
+        <a class="downvote {% if review.user_vote == -1 %}active{% endif %}" {% if user.is_authenticated %}onclick="handleVote({{review.id}}, false)" href="javascript:;"{% else %}href="{% url 'login' %}"{% endif %}>
             <i class="fa fa-angle-down fa-fw"></i>
         </a>
     </div>
